--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/recommend.py",
+      "src": "api/model.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
@@ -17,7 +17,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/recommend.py"
+      "destination": "/api/model.py"
     }
   ],
   "env": {
