--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
       "src": "api/model.py",
       "use": "@vercel/python",
       "config": {
+        "runtime": "python3.9",  
         "maxLambdaSize": "50mb",
         "includeFiles": [
           "game_map.pkl",
@@ -19,9 +20,5 @@
       "source": "/api/(.*)",
       "destination": "/api/model.py"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.9",
-    "FLASK_ENV": "production"
-  }
+  ]
 }
