--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-blinker==1.9.0
-click==8.2.1
-Flask==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.1
-MarkupSafe==3.0.2
-numpy==1.26.4
-python-dateutil==2.9.0.post0
-pytz==2025.2
-scikit-learn==1.4.2
-scipy==1.13.0
-six==1.17.0
-threadpoolctl==3.6.0
-tzdata==2025.2
-Werkzeug==3.1.3
+blinker==1.6.2
+click==8.1.7
+Flask==2.2.5
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+MarkupSafe==2.1.3
+numpy==1.24.4
+python-dateutil==2.8.2
+pytz==2024.1
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+threadpoolctl==3.1.0
+tzdata==2023.3
+Werkzeug==2.2.3
+vercel-wsgi==0.5.1
